# OmniCourse

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint-test.yml
backend/: .coverage  Dockerfile  README.md  conftest.py  manage.py  pyproject.toml
backend/src/ai/: apps.py
backend/src/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
backend/src/assessment/: apps.py  models.py
backend/src/core/: asgi.py  exceptions.py  health.py  middleware.py  urls.py  views.py  wsgi.py
backend/src/core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/src/courses/: apps.py  models.py
backend/src/courses/migrations/: 0001_initial.py
backend/src/export/: __init__.py  apps.py  models.py
backend/src/export/common/: zipper.py
backend/src/export/management/commands/: export_scorm.py
backend/src/export/scorm/: service.py  writer.py
backend/src/jobs/: apps.py  models.py
backend/src/jobs/migrations/: 0001_initial.py
docs/openapi/: openapi.json
docs/ops/: branching.md
docs/schemas/: quiz.schema.json
export/specs/: olx.md  qti.md  scorm.md
tests/: __init__.py  conftest.py  factories.py  test_crud.py  test_health.py  test_scorm_export.py
tests/golden/scorm/: MANIFEST.txt
